--- a/i18n/en.json
+++ b/i18n/en.json
@@ -64,11 +64,11 @@
     },
     "AntlionJaws": {
       "name": "ANTLION JAWS",
-      "description": "On pickup, choose a crew member. All of their card attacks now pierce."
+      "description": "On pickup, choose a crew member.\nAll of their card attacks now pierce."
     },
     "DefenseExchange": {
       "name": "DEFENSE EXCHANGE",
-      "description": "On pickup, choose a crew member. Gain 1 Tempshield after playing one of their cards.\n <c=downside>All of their card attacks deal -1 damage.</c>"
+      "description": "On pickup, choose a crew member.\nGain 1 <c=status>tempshield</c> after playing one of their cards.\n<c=downside>All of their card attacks deal -1 damage.</c>"
     },
     "ElectricNeedles": {
       "name": "ELECTRIC NEEDLES",
@@ -126,7 +126,16 @@
       }
     },
     "HardCharge": {
-      "name":  "Hard Charge"
+      "name": "Hard Charge"
+    },
+    "OverextendedBlast": {
+      "name": "Dangerous Blast"
+    },
+    "VenomBurst": {
+      "name": "Venom Burst"
+    },
+    "HurricaneBlast": {
+      "name":  "Hurricane Blast"
     },
     "PiercingBlow": {
       "name": "Piercing Blow"
